podi: Add initial runner implementation.
- Host can flash image into memories then kick of the core.
- PIO used to interface with SQI.
- Currently completely untested...

--- a/podi/CMakeLists.txt
+++ b/podi/CMakeLists.txt
@@ -11,8 +11,8 @@ add_executable(podi
     main.c
 )
 
-target_link_libraries(podi pico_stdlib)
+target_link_libraries(podi pico_stdlib hardware_pio)
 
+pico_generate_pio_header(podi ${CMAKE_CURRENT_LIST_DIR}/sqi.pio)
 pico_enable_stdio_usb(podi 1)
-
 pico_add_extra_outputs(podi)
